Sphinx-4 Speech Recognition System
-------------------------------------------------------------------

Version:       1.0Beta+
Release Date:  xxx xxxx

Detailed Changes:
----------------

PBL - 12/13/04
    Incorporated contribution from Gregg Liming that adds support for 
    dictionary addenda in the FastDictionary.

WDW - 11/09/04 
    Made WordPruningBreadthFirstSearchManager.recognize behavior
    consistent with the SimpleBreadthFirstSearchManager:  when
    their is no more data to decode, a null Result is returned.

    Made AccuracyTracker an abstract class; moved its best path
    logic to a new class: BestPathAccuracyTracker; created a 
    new class, BestConfidenceAccuracyTracker, that uses the
    ConfidenceScorer to determine the best hypothesis.

    Added a LatticeDemo to demonstrate how to obtain lattices
    from recognition results.


-------------------------------------------------------------------

Version:       1.0Beta
Release Date:  September 2004

-------------------------------------------------------------------

New Features:
-------------
    - Confidence scoring
    - Dynamic grammars
    - Narrow bandwidth acoustic model
    - Out-of-grammar utterance rejection
    - More demonstration programs
    - WSJ5K Language model


Improvements
------------
    - Better control over microphone selection
    - JSGF limitations removed
    - Improved performance for large, perplex JSGF grammars
    - Added Filler support for JSGF Grammars
    - Lots of bug fixes


Detailed Changes
----------------
PBL - 9/22/04 
    Improved performance of the DynamicFlatLinguist

    Upgraded the simple FlatLinguist to work properly with the
    WordPruningBreadthFirstSearchManager

    Fixed some problems with the PartitionActiveList that would allow
    incorrect tokens to be removed from the list during a replace.

WDW - 9/20/04
    Added selectMixer parameter and implementation to Microphone,